hphp/hack/test/typecheck/concurrent/error/concurrent_non_awaitable.php
<?hh

function get(): int { return 42; }
async function gen(): Awaitable<int> { return 42; }

async function foo(): Awaitable<void> {
  concurrent {
    $x = await get();
    $y = await gen();
  }
}
