hphp/hack/test/typecheck/concurrent/error/concurrent_non_awaitable.php.legacy.exp
File "concurrent_non_awaitable.php", line 8, characters 16-20:
await can only operate on an Awaitable (Typing[4110])
File "concurrent_non_awaitable.php", line 8, characters 16-20:
This is an object of type Awaitable<_>
File "concurrent_non_awaitable.php", line 3, characters 17-19:
It is incompatible with an int
